--- a/configs/production.yml
+++ b/configs/production.yml
@@ -25,7 +25,7 @@ shutdown:
   timeSec1: 10
   timeSec2: 10
 log:
-  level: debug
+  level: $LOG_LEVEL
 swagger:
   host: cocotola.com
   schema: https
